Initial dist subtree commit

--- a/index.css
+++ b/index.css
@@ -79,7 +79,7 @@ img {
 }
 
 .block-header_wrap {
-    background-image: url('imagesheese.png');
+    background-image: url('./images/cheese.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -89,7 +89,7 @@ img {
 }
 
 .header-link_phone-icon {
-    background-image: url('imageshone.svg');
+    background-image: url('./images/phone.svg');
     background-repeat: no-repeat;
     background-size: 24px 24px;
     background-position: center;
